--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 }
 
 body{
+    width: 100%;
     font-family: 'Lato', sans-serif;
     margin: 0;
 }
@@ -164,6 +165,7 @@ span{
     background-color: #ffc0cb;
     color: white;
     padding: 50px;
+    width: 100%;
     height: 800px;
     text-align: center;
 }
@@ -218,6 +220,7 @@ span{
     background-position: center;
     background-attachment: fixed;
     padding: 50px;
+    width: 100%;
     height: auto;
     text-align:center;
 }
